tests/fixtures/invalid/round_bytes.py
# Cannot call round() with Bytes
x = round(b"hello")
